# tjr104_t01

./: .gitignore  Dockerfile  README.md  create_acc_nearby_obs_stn_table.py  create_weather_hist_table.py  docker-compose.yml  e_crawler_observation_stations.py  e_crawler_weather_hist_01_checkmiss.py  l_Integrate_main.py  l_tomysql_acc_nearby_obs_stn.py  pyproject.toml  r_app.py  requirements.txt  setup.sh  start_streamlit.sh
.streamlit/: config.toml
core/: c_data_service.py  c_db.py  c_ui.py  r_cache.py
dags/: airflow_dag.py  d_accident_historical_pipeline.py  d_accident_insert_hist.py  d_accident_recent_pipeline.py  d_accident_reset_db.py  d_frontend_db.py  d_join_weather_accident.py  d_precompute_redis.py  d_redis_audit.py  d_redis_frontend_db_consol.py  d_redis_precompute.py  d_redis_precompute_market.py  d_redis_precompute_market_stats.py  d_weatherapi_keep_refresh_this_year.py  d_weatherapi_trace_historical_year.py  nightmarket_flow.py
mart/: Mart_accident_loc_weather.sql  Mart_partyA_road_user_features.sql  Mart_pedestrian_related_causes_top5.sql  Mart_quarterly_death.sql  Mart_quarterly_pedestrian_death_injury.sql  Mart_yearly_a1a2_distrb.sql  Mart_yearly_accident_types_ratio.sql
mart_table/: Mart_monthly_pedestrian_death_injury.sql  Mart_partyA_road_user_features.sql  Mart_quarterly_death.sql  Mart_quarterly_pedestrian_death_injury.sql  Mart_quarterly_pedestrian_related_causes_top5.sql  Mart_weather_at_accident_locations_2021to2025.sql  Mart_weather_at_accident_locations_this_year.sql  Mart_yearly_a1a2_distrb.sql  Mart_yearly_accident_types_ratio.sql  (+1 more)
(+78 files in other folders)
